liblscp - LinuxSampler Control Protocol API
-------------------------------------------

ChangeLog

0.9.2  2021-03-14  An End-of-Winter'21 release.

0.9.1  2021-02-07  A Winter'21 release.

0.9.0  2020-12-17  A Winter'20 release.

0.6.2  2019-03-24  A Spring'20 release.

                   Fixed compile errors on macOS.

                   Expose actual system error codes via client interface
                   instead of just -1 whenever a syscall failed.

                   Added new client interface function:
                     lscp_client_connection_lost();
                   for checking whether client lost connection to server.

                   Fixed potential missing NULL termination of locale strings.

0.6.1  2019-12-22  The Winter'19 Release.

0.6.0  2017-12-12  An Autumn'17 release.

0.5.8  2016-11-14  A Fall'16 release.

0.5.7  2013-12-31  Use getaddrinfo() instead of deprecated gethostbyname().

                   Update on newer autoconf macros (m4).

                   Fixes for building for Windows with configure and make.

                   Makefile fixes for building in separate directory.

                   Autoconf fix: AC_CONFIG_HEADER obsolete error (fixes #194).

0.5.6  2009-08-01  Fixed locale related parser bug (fixes #59).

                   Added new client interface functions, for managing
                   the global limit of maximum voices and disk streams:
                   lscp_get_voices(), lscp_set_voices(), lscp_get_streams(),
                   lscp_set_streams().

                   _lscp_device_port_info_query(): take port parameter
                   "NAME" into the result list.

                   Bugfix: _lscp_client_evt_proc() dropped LSCP events.

                   Bugfix in lscp_client_subscribe(): only the first
                   lscp_client_subscribe() call succeeded (per client),
                   all subsequent ones failed.

                   Added support for new (un)subscribable events: